# state-machine-replication

./: CMakeLists.txt  smr_machine_visualization.ipynb
.github/workflows/: Mjölnir.yml  ci.yml
examples/: raw_events.jsonl  summary.json  timeline.csv
lib/: dune
test/: dune
